--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
+    "autoprefixer": "9.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss": "^8.2.13",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "^2.1.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
