--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bulma": "^0.9.2",
     "core-js": "^3.6.5",
     "strava-v3": "^2.0.9",
     "vue": "^2.6.11",
@@ -28,7 +29,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "postcss": "^8.2.13",
     "sass-loader": "^8.0.2",
     "tailwindcss": "^2.1.2",
